--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -4,89 +4,56 @@
     ViewBag.Title = "Index";
 }
 
+@section styles{
+    @*@if (Model[0].Model.Landscape == true)
+        {
+            < link href = "~/Content/customLand.css" rel = "stylesheet" />
+        }
+        else
+        {
+            < link href = "~/Content/customPort.css" rel = "stylesheet" />
+        }*@
+    <link href="~/Content/customLand.css" rel="stylesheet" />
+}
+<script type="text/javascript">
+    function GoToRoom(id) {
+        window.location = "/Sivas/Products/Details?id=" + id;                
+    }
+</script>
+
 <h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Landscape)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Brand)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Model)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EnergyStar)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Color)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Specification)
-        </th>
-        <th></th>
-    </tr>
-
+<div class="ProductContainer">
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
+        <div class="product" @("onclick=GoToRoom('" + item.Id + "')")>
+            <div class="product_Image">
                 @{
                     var message = item.Category + " " + item.Model;
                 }
-                <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" alt="@message" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Landscape)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Brand)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Model)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnergyStar)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Color)
-            </td>
-            <td>
-                @{
-                    var displaySpecification = "<ul><li>";
-                    if (item.Specification.Contains("~"))
-                    {
-                        displaySpecification += item.Specification.Replace("~", "</li><li>");
+                <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" class="product_Image" alt="@message" />
+            </div>
+            <div class="product_Description">
+                <span class="Brand">@Html.DisplayFor(model => item.Category)</span>
+                <span class="Model">@Html.DisplayFor(model => item.Brand)</span>
+                <span class="EneryStar">@Html.DisplayFor(model => item.EnergyStar)</span>
+                <span class="Color">@Html.DisplayFor(model => item.Color)</span>
+                <span class="Specification">
+                    @{
+                        var displaySpecification = "<ul><li>";
+                        if (item.Specification.Contains("~"))
+                        {
+                            displaySpecification += item.Specification.Replace("~", "</li><li>");
+                        }
+                        else
+                        {
+                            displaySpecification += item.Specification;
+                        }
+                        displaySpecification += "</li></ul>";
+                        item.Specification = displaySpecification;
                     }
-                    else
-                    {
-                        displaySpecification += item.Specification;
-                    }
-                    displaySpecification += "</li></ul>";
-                    item.Specification = displaySpecification;
-                }
-                @Html.Raw(Server.HtmlDecode(item.Specification))
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-                    }
-
-</table>
+                    @Html.Raw(Server.HtmlDecode(item.Specification))
+                </span>                
+            </div>
+        </div>
+                        }
+</div>
