--- a/Sivas/Content/customPort.css
+++ b/Sivas/Content/customPort.css
@@ -1,40 +1,67 @@
 ﻿@charset "utf-8";
-.ProductContainer {	
-	color: #808080;
+
+.ProductContainer {
+    color: #808080;
 }
+
 .product {
-	background-color: rgb(255, 250, 250);
-	margin: 10px;
-	float: left;
-	height: 200px;
-	width: 300px;
+    background-color: rgb(255, 250, 250);
+    margin: 10px;
+    float: left;
+    height: 240px;
+    width: 300px;
 }
-.product_Image {
-	display: block;
-	float: left;
-	margin-right: 10px;
-	height: 200px;
-	width: 80px;
 
-}
-.product_Description {
-	display: inline;
-	float: left;
-	margin-top: 5px;
+    .product:hover {
+        cursor: pointer;
+    }
 
+.product_ImagePort {
+    display: block;
+    float: left;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 10px;
+    height: 200px;
+    width: 80px;
 }
-.product_Description .Brand {
-	display: block;
+
+.product_DescriptionPort {
+    display: compact;
+    margin-top: 5px;
 }
-.product_Description .Model {
-	display: block;
-}
-.product_Description .EneryStar {
-	display: block;
-}
-.product_Description .Color {
-	display: block;
-}
-.product_Description .Specification {
-	display: block;
-}
+
+    .product_DescriptionPort .Brand {
+        font-size: larger;
+        text-align: left;
+        display: block;
+    }
+
+    .product_DescriptionPort .Model {
+        display: block;
+    }
+
+    .product_DescriptionPort .EneryStar {
+        display: block;
+    }
+
+    .product_DescriptionPort .Color {
+        display: block;
+    }
+
+    .product_DescriptionPort .Specification {
+        display: block;
+    }
+
+        .product_DescriptionPort .Specification ul {            
+            list-style: none;
+        }
+
+            .product_DescriptionPort .Specification ul li {
+                display: flex;
+                background: url(../image/bullet.png) no-repeat;
+                padding-left: 30px;
+                padding-right: 10px;
+                background-position-x: 0;
+                background-position-y: -6px;
+            }
