--- a/Sivas/Views/Products/Details.cshtml
+++ b/Sivas/Views/Products/Details.cshtml
@@ -2,28 +2,132 @@
 
 @{
     ViewBag.Title = "Details";
-
 }
+
 @section styles{
     @if (Model.Landscape == true)
     {
-        <link href = "/Sivas/Content/customLand.css" rel = "stylesheet" />
+        <link href="/Sivas/Content/customLand.css" rel="stylesheet" />
     }
     else
     {
-        <link href = "/Sivas/Content/customPort.css" rel = "stylesheet" />
+        <link href="/Sivas/Content/customPort.css" rel="stylesheet" />
     }
 }
 
+@*<div>
+    <h4>Products</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Category)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Company)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Company)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Brand)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Brand)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Model)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Model)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Image)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Landscape)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Landscape)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EnergyStar)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EnergyStar)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Price)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Offer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Offer)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Color)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Color)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Specification)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Specification)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+    </dl>
+</div>*@
+
+
 <div class="ProductContainer">
     <div class="product">
-        <div @(Model.Landscape==true?"class=product_ImageLand":"class=product_ImagePort")>
+        <div @(Model.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort")>
             @{
                 var message = Model.Category + " " + Model.Model;
             }
-            <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(Model.Image))" @(Model.Landscape==true?"class=product_ImageLand":"class=product_ImagePort") alt="@message" />
+            <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(Model.Image))" @(Model.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" />
         </div>
-        <div @(Model.Landscape==true? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
+        <div @(Model.Landscape == true ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
             <span class="Brand">@Html.DisplayFor(model => model.Category)</span>
             <span class="Model">@Html.DisplayFor(model => model.Brand)</span>
             <span class="EneryStar">@Html.DisplayFor(model => model.EnergyStar)</span>
@@ -32,7 +136,6 @@
         </div>
     </div>
 </div>
-
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
