--- a/Sivas/Views/Products/Delete.cshtml
+++ b/Sivas/Views/Products/Delete.cshtml
@@ -20,19 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Image)
+            @Html.DisplayNameFor(model => model.Company)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Landscape)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Landscape)
+            @Html.DisplayFor(model => model.Company)
         </dd>
 
         <dt>
@@ -52,11 +44,43 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Image)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Landscape)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Landscape)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.EnergyStar)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.EnergyStar)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Price)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Offer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Offer)
         </dd>
 
         <dt>
@@ -73,6 +97,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Specification)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
     </dl>
