--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -28,7 +28,8 @@
 <div class="ProductContainer">
     @foreach (var item in Model)
     {
-        <div class="product" @("onclick=GoToRoom('" + item.Id + "')")>
+        <div class="product" >
+            <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + item.Id + "')")>More Details</span></div>
             <div @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort")>
                 @{
                     var message = item.Category + " " + item.Model;
@@ -36,15 +37,46 @@
                 <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" @(item.Landscape == true ? "class=product_ImageLand" : "class=product_ImagePort") alt="@message" />
             </div>
             <div @(item.Landscape == true ? "class=product_DescriptionLand" : "class=product_DescriptionPort")>
-                <span class="Category">@Html.DisplayFor(model => item.Category)</span>
+                @*<span class="Category">@Html.DisplayFor(model => item.Category)</span>*@
                 <span class="Company">@Html.DisplayFor(model => item.Company)</span>
                 <span class="Brand">@Html.DisplayFor(model => item.Brand)</span>
                 <span class="Model">@Html.DisplayFor(model => item.Model)</span>
                 @*<span class="Image">@Html.DisplayFor(model => item.Image)</span>*@
                 @*<span class="Landscape">@Html.DisplayFor(model => item.Landscape)</span>*@
-                <span class="EneryStar">@Html.DisplayFor(model => item.EnergyStar)</span>
+                @*<span class="EneryStar">@Html.DisplayFor(model => item.EnergyStar)</span>*@
+                <span class="EneryStar">
+                    @{
+                        if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Five)
+                        {
+                            <img src="~/image/EnergyStarLand/FiveStar.png" />
+                        }
+                        else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Four)
+                        {
+                            <img src="~/image/EnergyStarLand/FourStar.png" />
+                        }
+                        else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Three)
+                        {
+                            <img src="~/image/EnergyStarLand/ThreeStar.png" />
+                        }
+                        else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.Two)
+                        {
+                            <img src="~/image/EnergyStarLand/TwoStar.png" />
+                        }
+                        else if (item.EnergyStar == Sivas.Models.ProductEnergyStar.One)
+                        {
+                            <img src="~/image/EnergyStarLand/OneStar.png" />
+                        }
+                    }
+                </span>
                 <span class="Price">@Html.DisplayFor(model => item.Price)</span>
-               @* <span class="Offer">@Html.DisplayFor(model => item.Offer)</span>*@
+                <span class="Offer">
+                    @{
+                        if (item.Offer == true)
+                        {
+                            <img src="~/image/Offer.png" />
+                        }
+                    }
+                </span>
                 <span class="Color">@Html.DisplayFor(model => item.Color)</span>
                 <span class="Specification">
                     @{
